[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Endre Simo <esimov@gmail.com>"]

[dependencies]
iron = "0.5.1"
mime = "0.2.3"
router = "0.5.1"
urlencoded = "0.5.0"

[[example]]
name = "hello-world"
path = "hello-world/src/main.rs"

[[example]]
name = "gcd"
path = "gcd/src/main.rs"

[[example]]
name = "gcd-web"
path = "gcd-web/src/main.rs"